# ProgrammingProjects

./: CMakeLists.txt  Makefile  TODO
Project#01/: Makefile  Solution.cpp  TODO  geometry_opps.hpp  inputparser.hpp  molecule.cpp  molecule.hpp
sandbox/: Makefile  PP  PassPointer.cpp  README.md  TwoD.cpp  bit_trickery.cpp  delfault  diag_check.py  eigval_ordering.py  eigvec.cpp  energy_eval.py  getvec  nullptr.cpp  ptrprint  simple_mpi.cpp
src/: Solution.cpp  geometry_opps.hpp  hf.cpp  hf_reader.hpp  hf_wfn.cpp  hf_wfn.hpp  inputparser.hpp  molecule.cpp  molecule.hpp  tei_handler.cpp  tei_handler.hpp
